hphp/hack/test/typecheck/static_property_visibility.php.exp
File "static_property_visibility.php", line 8, characters 8-11:
You cannot access this property (Typing[4112])
  File "static_property_visibility.php", line 4, characters 18-20:
  This property is private
